<resources>
    <string name="app_name">TDA</string>
    <string name="new_user">کاربر جدید</string>
    <string name="delete_user">حذف کاربر</string>
    <string name="reset_user">ریست دستگاه</string>
    <string name="change_admin">تغییر مدیر</string>
    <string name="device_name">Device Name:</string>
    <string name="Loading_title">منتظر باشید...</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">همراه من</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_toolbar_text">همراه من</string>
    <string name="home_btn_add">افزودن دستگاه</string>
    <string name="empty">هیچ موردی یافت نشد</string>
    <string name="home_device_label">لیست دستگاه ها</string>
    <string name="menu_login">ورود / ثبت نام</string>
    <string name="menu_create_backup">تهیه نسخه پشتیبان</string>
    <string name="menu_restore">بازگردانی نسخه پشتیبان</string>
    <string name="menu_products">سایر محصولات</string>
    <string name="menu_support">پشیتبانی محصول</string>
    <string name="adddevice_toolbar_text">افزودن دستگاه</string>
    <string name="bluetooth_status_label">وضعیت بلوتوث:</string>
    <string name="bluetooth_status_enable">روشن</string>
    <string name="bluetooth_name_label">نام بلوتوث:</string>
    <string name="nullvalue_string">---</string>
    <string name="adddevice_device_list_label">لیست بلوتوث</string>
    <string name="adddevice_device_name_hint">نام دستگاه را وارد کنید</string>
    <string name="device_toolbar_text">جزییات دستگاه</string>
    <string name="device_btn_add">افزودن کاربر</string>
    <string name="device_btn_connection_fail">اتصال به دستگاه</string>
    <string name="device_btn_connection_success">قطع اتصال</string>
    <string name="device_device_list_label">لیست کاربران</string>
    <string name="bluetooth_device_label">نام دستگاه:</string>
    <string name="connection_fail">عدم اتصال</string>
    <string name="connection_success">متصل شد</string>
    <string name="adddevice_device_password_hint">لطفا رمز عبور را وارد کنید</string>
    <string name="adddevice_toolbar_title">افزودن دستگاه</string>
    <string name="home_toolbar_title">همراه من</string>
    <string name="bluetooth_ip_label">آدرس:</string>
    <string name="btn_add">افزودن</string>
    <string name="add_device_dialog_tag">add_device_dialog_tag</string>
    <string name="device_toolbar_title">جزییات دستگاه</string>
    <string name="device_name_label">نام دستگاه:</string>
    <string name="connection_progress">درحال اتصال</string>
    <string name="adddevice_device_list_loading">درحال دریافت...</string>
    <string name="action_delete">حذف دستگاه</string>
    <string name="action_get_users_from_device">گرفتن اثر انگشت کاربر</string>
    <string name="user_btn_add">ثبت کاربر</string>
    <string name="new_user_step_one">تایید اثر انگشت مدیر</string>
    <string name="new_user_step_two">تایید اثرانگشت جدید</string>
    <string name="new_user_name_holder">نام کاربر جدید را وارد کنید</string>
    <string name="user_type_label">نوع کاربری:</string>
    <string name="user_name_label">نام کاربر:</string>
    <string name="menu_user_delete">حذف کاربر</string>
    <string name="action_user_delete">حذف کاربر</string>
    <string name="new_user_step_zero">درحال ارسال دستور</string>
    <string name="get_user_by_fp_step_two">دریافت اثرانگشت کاربر</string>
    <string name="action_reset_device">ریست دستگاه</string>
    <string name="action_user_admin">تغییر به مدیر</string>
    <string name="login_mobile_hint">شماره موبایل</string>
    <string name="login_desc">جهت ورود به برنامه لطفا شماره موبایل خود را در باکس زیر وارد کنید</string>
    <string name="activation_desc">کد ارسالی از طریق پیامک را وارد کنید</string>
    <string name="activation_code_hint">کدفعالسازی</string>
    <string name="activation_btn_add">فعالسازی</string>
    <string name="login_btn_add">ورود به برنامه</string>
</resources>
