<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".model.dialogs.adddevice.AddDeviceDialog"
    android:padding="@dimen/padding_loading_box"
    android:id="@+id/adddevice_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/adddevice_dialog_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_loading_box"
        android:hint="@string/adddevice_device_name_hint"
        android:textSize="12sp">

    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/adddevice_dialog_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_loading_box"
        android:gravity="right"
        android:hint="@string/adddevice_device_password_hint"
        android:inputType="textPassword"
        android:textSize="12sp">

    </com.google.android.material.textfield.TextInputEditText>

    <Button
        android:layout_margin="@dimen/padding_loading_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/adddevice_dialog_btn_add"
        android:textColor="@android:color/white"
        android:drawableLeft="@drawable/ic_plus"
        android:padding="10dp"
        android:text="@string/btn_add"
        android:background="@drawable/style_btn_connection_fail"
        />

</LinearLayout>