<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.device.DeviceFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/device_appbar"
        android:background="@android:color/white"
        android:paddingTop="@dimen/padding_toolbar_top">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layoutDirection="rtl"
            app:title="@string/device_toolbar_title"
            app:titleCentered="true"
            app:titleTextAppearance="@style/ToolbarTextAppearance" />

    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/padding_loading_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/device_btn_add"
        android:textColor="@android:color/white"
        android:drawableLeft="@drawable/ic_plus"
        android:padding="10dp"
        android:text="@string/device_btn_add"
        android:background="@drawable/style_btn_connection_fail"
        tools:ignore="MissingConstraints"
        />
    <RelativeLayout
        android:layout_below="@+id/device_appbar"
        android:layout_above="@+id/device_btn_add"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            app:cardElevation="15dp"
            android:elevation="15dp"
            android:padding="5dp"
            android:id="@+id/device_card_above"
            android:layout_marginTop="1dp"
            app:cardCornerRadius="10dp"
            android:layout_marginRight="@dimen/margin_cardview"
            android:layout_marginLeft="@dimen/margin_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layoutDirection="rtl"
                android:padding="@dimen/padding_loading_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Switch
                    android:id="@+id/device_bluetooth_btn"
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/device_bluetooth_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bluetooth_status_label"
                    android:textSize="10sp"/>

                <TextView
                    android:textSize="10sp"
                    android:layout_marginRight="5dp"
                    android:id="@+id/device_bluetooth_status"
                    android:layout_toLeftOf="@+id/device_bluetooth_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textSize="10sp"
                    android:layout_marginTop="@dimen/padding_loading_box"
                    android:layout_below="@+id/device_bluetooth_label"
                    android:id="@+id/device_bluetooth_name_label"
                    android:text="@string/bluetooth_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textSize="10sp"
                    android:layout_marginRight="5dp"
                    android:id="@+id/device_bluetooth_name"
                    android:layout_marginTop="@dimen/padding_loading_box"
                    android:layout_below="@+id/device_bluetooth_status"
                    android:layout_toLeftOf="@+id/device_bluetooth_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textSize="10sp"
                    android:layout_marginTop="@dimen/padding_loading_box"
                    android:layout_below="@+id/device_bluetooth_name_label"
                    android:id="@+id/device_bluetooth_device_name_label"
                    android:text="@string/bluetooth_device_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textSize="10sp"
                    android:layout_marginRight="5dp"
                    android:id="@+id/device_bluetooth_device_name"
                    android:layout_marginTop="@dimen/padding_loading_box"
                    android:layout_below="@+id/device_bluetooth_name"
                    android:layout_toLeftOf="@+id/device_bluetooth_device_name_label"
                    android:text="@string/nullvalue_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layoutDirection="rtl"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentLeft="true"
                    android:padding="5dp"
                    android:background="@drawable/style_turnoff_round_txt"
                    android:id="@+id/device_bluetooth_status_view"
                    android:layout_below="@+id/device_bluetooth_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.github.ybq.android.spinkit.SpinKitView
                        android:id="@+id/device_spin_kit"
                        style="@style/SpinKitView.Small.MultiplePulse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        app:SpinKit_Color="@android:color/white" />

                    <TextView
                        android:textSize="10sp"
                        android:textColor="@color/white"
                        android:id="@+id/device_bluetooth_device_status"
                        android:text="@string/connection_fail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </LinearLayout>

                <Button
                    android:id="@+id/device_btn_connection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/device_bluetooth_device_name"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/style_btn_connection_success"
                    android:padding="10dp"
                    android:text="@string/device_btn_connection_fail"
                    android:textColor="@android:color/white"
                    tools:ignore="MissingConstraints" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/device_list_layout"
            android:layoutDirection="rtl"
            android:gravity="center_vertical"
            android:layout_below="@+id/device_card_above"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/gray_light"
                android:padding="@dimen/padding_loading_box"
                android:textSize="8sp"
                android:text="@string/device_device_list_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>


        <RelativeLayout
            android:layout_below="@+id/device_list_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/device_device_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <RelativeLayout
                android:id="@+id/device_empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/device_empty_img"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_empty" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/device_empty_img"
                    android:layout_centerHorizontal="true"
                    android:text="@string/empty"
                    android:textColor="@color/gray_light"
                    android:textSize="8sp" />

            </RelativeLayout>

        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>