<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_login_container"
    android:layout_width="match_parent"
    tools:context=".ui.activation.ActivationFragment"
    android:layout_height="match_parent">



    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/padding_loading_box"
        app:layout_constraintTop_toTopOf="@+id/fragment_login_container"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_login_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <TextView
            android:textSize="12dp"
            android:textColor="@color/gray_light"
            android:text="@string/activation_desc"
            android:textAlignment="center"

            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_mobile"
            android:textAlignment="center"
            android:textSize="16dp"
            android:maxLength="6"
            android:inputType="phone"
            android:layout_marginTop="10dp"
            android:hint="@string/activation_code_hint"
            android:text=""
            />


        <Button
            android:id="@+id/login_btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/style_btn_connection_fail"
            android:padding="10dp"
            android:text="@string/activation_btn_add"
            android:textColor="@android:color/white"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" />

    </LinearLayout>
    <include layout="@layout/layout_loading" android:id="@+id/login_loading"/>
</androidx.constraintlayout.widget.ConstraintLayout>