<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.adddevice.AddDeviceFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/adddevice_appbar"
        android:background="@android:color/white"
        android:paddingTop="@dimen/padding_toolbar_top">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextAppearance="@style/ToolbarTextAppearance"
            app:titleCentered="true"
            app:title="@string/adddevice_toolbar_title"
            />


    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/padding_loading_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/adddevice_btn_add"
        android:textColor="@android:color/white"
        android:drawableLeft="@drawable/ic_plus"
        android:padding="10dp"
        android:text="@string/home_btn_add"
        android:background="@drawable/style_btn_connection_fail"
        tools:ignore="MissingConstraints"
        />
    <RelativeLayout
        android:layout_below="@+id/adddevice_appbar"
        android:layout_above="@+id/adddevice_btn_add"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            app:cardElevation="15dp"
            android:elevation="15dp"
            android:padding="5dp"
            android:id="@+id/adddevice_card_above"
            android:layout_marginTop="1dp"
            app:cardCornerRadius="10dp"
            android:layout_marginRight="@dimen/margin_cardview"
            android:layout_marginLeft="@dimen/margin_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layoutDirection="rtl"
                android:padding="@dimen/padding_loading_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Switch
                    android:id="@+id/adddevice_bluetooth_btn"
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></Switch>

                <TextView
                    android:id="@+id/adddevice_bluetooth_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bluetooth_status_label"
                    android:textSize="10sp"></TextView>

                <TextView
                    android:textSize="10sp"
                    android:layout_marginRight="5dp"
                    android:id="@+id/adddevice_bluetooth_status"
                    android:layout_toLeftOf="@+id/adddevice_bluetooth_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></TextView>

                <TextView
                    android:textSize="10sp"
                    android:layout_marginTop="@dimen/padding_loading_box"
                    android:layout_below="@+id/adddevice_bluetooth_label"
                    android:id="@+id/adddevice_bluetooth_name_label"
                    android:text="@string/bluetooth_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></TextView>

                <TextView
                    android:textSize="10sp"
                    android:layout_marginRight="5dp"
                    android:id="@+id/adddevice_bluetooth_name"
                    android:layout_marginTop="@dimen/padding_loading_box"
                    android:layout_below="@+id/adddevice_bluetooth_status"
                    android:layout_toLeftOf="@+id/adddevice_bluetooth_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></TextView>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/adddevice_list_layout"
            android:layoutDirection="rtl"
            android:gravity="center_vertical"
            android:layout_below="@+id/adddevice_card_above"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/gray_light"
                android:padding="@dimen/padding_loading_box"
                android:textSize="8sp"
                android:text="@string/adddevice_device_list_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>

            <com.github.ybq.android.spinkit.SpinKitView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adddevice_spin_kit"
                style="@style/SpinKitView.Small.MultiplePulse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:visibility="gone"
                app:SpinKit_Color="@android:color/holo_blue_light" />

            <TextView
                android:textColor="@color/gray_light"
                android:padding="@dimen/padding_loading_box"
                android:id="@+id/adddevice_loading_text"
                android:textSize="8sp"
                android:visibility="gone"
                android:text="@string/adddevice_device_list_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>


        </LinearLayout>


        <RelativeLayout
            android:layout_below="@+id/adddevice_list_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/adddevice_device_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>

            <RelativeLayout
                android:id="@+id/adddevice_empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/ic_empty"
                    android:layout_centerInParent="true"
                    android:layout_width="64dp"
                    android:id="@+id/adddevice_empty_img"
                    android:layout_height="64dp"></ImageView>

                <TextView
                    android:textColor="@color/gray_light"
                    android:textSize="8sp"
                    android:text="@string/empty"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/adddevice_empty_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></TextView>

            </RelativeLayout>

        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>